[tool.poetry]
name = "jsoned"
version = "0.1.0"
description = ""
authors = ["Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
rfc3986 = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.24.0"
black = "^21.9b0"
pytest-cov = "^3.0.0"
jschon = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
